@@ -35,12 +35,16 @@
 #include "fapolicyd-backend.h"
 
 extern backend file_backend;
+#ifdef USE_RPM
 extern backend rpm_backend;
+#endif
 
 static backend* compiled[] =
 {
 	&file_backend,
+#ifdef USE_RPM
 	&rpm_backend,
+#endif
 	NULL,
 };
 
