@@ -1,6 +1,7 @@
 0.9.2
 - Split codebase into daemon, library and cli
 - Add Admin defined trust database
+- Make use of librpm optional
 
 0.9.1
 - Make watched filesystems configurable
